syntax = "proto3";

package harta.file;

option csharp_namespace = "Harta.Services.File.Grpc";

import "google/api/annotations.proto";
import "ordering.proto";

service FileService {
  rpc Format(FormatRequest) returns (harta.ordering.CreateOrderResponse) {
    option (google.api.http) = {
      get : "file/format/{file_name}"
    };
  }
}

message FormatRequest {
  // file name from BC
  string file_name = 1;

  // erp type from BC
  string file_type = 2;
}
